syntax = "proto3";

package mpb;

option go_package = "./mpb";

import "common.proto";

// account
message CResTelegramLogin {
    AccountInfo account = 1;
}

message CReqLoginTest {
    uint64 user_id = 1;
}

message CResLoginTest {
    AccountInfo account = 1;
    string token = 2;
    uint32 energy = 3;
    int64 energy_update_at = 4;
    BossDefeatHistory boss_defeat_history = 5;
    repeated BuffCard buff_cards = 6;
    EGame.BuffCardStatus buff_card_status = 7;
}

message CReqLoginByToken {
    string token = 1;
}

message CResLoginByToken {
    AccountInfo account = 1;
    string token = 2;
    uint32 energy = 3;
    int64 energy_update_at = 4;
    BossDefeatHistory boss_defeat_history = 5;
    repeated BuffCard buff_cards = 6;
    EGame.BuffCardStatus buff_card_status = 7;
}